admin panel initialized

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer base {
+/* @layer base {
   :root {
     --background: 0 0% 100%;
     --foreground: 222.2 47.4% 11.2%;
@@ -67,6 +67,54 @@
     --ring: 216 34% 17%;
 
     --radius: 0.5rem;
+  }
+} */
+
+
+@layer base {
+  :root {
+    --background: 230 39% 98%;
+    --foreground: 230 79% 5%;
+    --card: 230 0% 100%;
+    --card-foreground: 230 79% 4%;
+    --popover: 230 39% 98%;
+    --popover-foreground: 231 76.92% 5.1%;
+    --primary: 283.21 100% 62.7%;
+    --primary-foreground: 0 0% 100%;
+    --secondary: 50 7% 40%;
+    --secondary-foreground: 0 0% 100%;
+    --accent: 284.43 94.87% 61.76%;
+    --accent-foreground: 0 0% 100%;
+    --destructive: 5 100% 51.58%;
+    --destructive-foreground: 282.76 100% 99.96%;
+    --muted: 50 0% 92.77%;
+    --muted-foreground: 50 6% 31%;
+    --border: 230 12.06% 84.08%;
+    --input: 230 0% 100%;
+    --ring: 230 7% 40%;
+    --radius: 0.5rem;
+  }
+
+  .dark {
+    --background: 230 55% 2%;
+    --foreground: 230 32% 97%;
+    --card: 230 55% 3%;
+    --card-foreground: 230 32% 98%;
+    --popover: 230 55% 2%;
+    --popover-foreground: 230 32% 97%;
+    --primary: 230 7% 40%;
+    --primary-foreground: 0 0% 100%;
+    --secondary: 50 7% 40%;
+    --secondary-foreground: 0 0% 100%;
+    --accent: 50 7% 40%;
+    --accent-foreground: 0 0% 100%;
+    --destructive: 5 94% 50%;
+    --destructive-foreground: 0 0% 100%;
+    --muted: 50 36% 13%;
+    --muted-foreground: 50 6% 69%;
+    --border: 230 4% 10%;
+    --input: 230 4% 10%;
+    --ring: 230 7% 40%;
   }
 }
 
